tests/snapshots/status_header__frozen_doc_still_has_its_live_markdown_link_checked.snap
---
source: tests/status_header.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[link-target]: link target `docs/gone.md` does not exist
 --> issues/0003-closed.md:5:17
  |
5 | See [the guide](docs/gone.md).
  |                 ^^^^^^^^^^^^ fix the path, or create the target
aigarden: 1 finding

----- stderr -----
