tests/snapshots/status_header__status_header_flags_an_unrecognized_status.snap
---
source: tests/status_header.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
issues/0004-typo.md: [status-header] status `dnoe` is not a recognized status (expected one of: open, done, implemented)
  help: set a `**Status:**` header to a keyword in `[status-header] live`/`terminal`
aigarden: 1 finding

----- stderr -----
