tests/snapshots/status_header__suppresses_naming_a_non_frozen_aware_rule_is_a_config_error.snap
---
source: tests/status_header.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
aigarden: in config file [CONFIG]: `status-header.suppresses` names `file-length`, which is not a frozen-aware rule (one of: link-target, link-case, bare-path, import-target, anchor-resolves, descriptive-anchor)
