tests/snapshots/status_header__suppressing_the_link_rules_frees_a_frozen_docs_dead_link_and_anchor.snap
---
source: tests/status_header.rs
info:
  program: aigarden
  args:
    - check
---
success: false
exit_code: 1
----- stdout -----
error[link-target]: link target `docs/gone.md` does not exist
 --> issues/0007-live.md:5:17
  |
5 | See [the guide](docs/gone.md).
  |                 ^^^^^^^^^^^^ fix the path, or create the target
aigarden: 1 finding

----- stderr -----
